# re-tex

./: .gitignore  Cargo.toml  README.md
src/: error.rs  format.rs  gdf.rs  lib.rs  macros.rs  tex.rs
test_files/: ch04_000_0000_1001_ALBD.tex.241106027  ch04_000_0000_1002_MB.tex.241106027
