[package]
name = "re-tex"
version = "0.2.0"
edition = "2024"

[dependencies]
better_default = "1.0"
byteorder = "1.5"
ddsfile = "0.5"
gdeflate = "0.4"
num-traits = "0.2"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"

image_dds = { version = "0.7", optional = true }
image = { version = "0.25", default-features = false, features = [
    "png",
    "rayon",
], optional = true }

[dev-dependencies]
regex = "1.11"

[features]
default = ["image"]
# Enable image crate, supports Image struct,
# which allows exporting png or other image formats.
image = ["dep:image", "dep:image_dds"]
